🎨 Fix legibility of contributor names in Night Shift
closes TryGhost/Ghost#8851
- use `var(--lightgrey)` as text colour for contributor names

--- a/ghost/admin/app/styles/app-dark.css
+++ b/ghost/admin/app/styles/app-dark.css
@@ -311,3 +311,7 @@ input,
 .gh-unsplash-zoom {
     background: rgba(0,0,0,0.8);
 }
+
+.gh-contributors a:before {
+    color: var(--lightgrey);
+}
